k8s/manifests/platform/operator-lifecycle-manager/base/v1.11.0/operator-controller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: olmv1
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    app.kubernetes.io/part-of: olm
  name: olmv1-system
