k8s/manifests/platform/operator-lifecycle-manager/base/v1.11.0/operator-controller/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: catalogd
    app.kubernetes.io/part-of: olm
  name: catalogd-controller-manager
  namespace: olmv1-system
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 7443
          protocol: TCP
        - port: 8443
          protocol: TCP
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      control-plane: catalogd-controller-manager
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: olmv1
    app.kubernetes.io/part-of: olm
  name: default-deny-all-traffic
  namespace: olmv1-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: operator-controller
    app.kubernetes.io/part-of: olm
  name: operator-controller-controller-manager
  namespace: olmv1-system
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      control-plane: operator-controller-controller-manager
  policyTypes:
    - Ingress
    - Egress
