k8s/manifests/platform/operator-lifecycle-manager/base/v1.11.0/operator-controller/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: catalogd-mutating-webhook-configuration
  labels:
    app.kubernetes.io/name: catalogd
    app.kubernetes.io/part-of: olm
  annotations:
    cert-manager.io/inject-ca-from-secret: cert-manager/olmv1-ca
    olm.operatorframework.io/feature-set: standard
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: catalogd-service
        namespace: olmv1-system
        path: /mutate-olm-operatorframework-io-v1-clustercatalog
        port: 9443
    failurePolicy: Fail
    name: inject-metadata-name.olm.operatorframework.io
    rules:
      - apiGroups:
          - olm.operatorframework.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clustercatalogs
    sideEffects: None
    timeoutSeconds: 10
    matchConditions:
      - name: MissingOrIncorrectMetadataNameLabel
        expression: "'name' in object.metadata && (!has(object.metadata.labels) || !('olm.operatorframework.io/metadata.name' in object.metadata.labels) || object.metadata.labels['olm.operatorframework.io/metadata.name'] != object.metadata.name)"
